samples/_failures_safe/1761040252_bf5bab_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4d0de9e6.c: In function ‘main’:
./samples/SAFE/__tmp_4d0de9e6.c:197:5: error: expected expression at end of input
  197 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_4d0de9e6.c:197:5: error: expected declaration or statement at end of input
